scrollbar css, flex css fixes and general code cleanup

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -24,7 +24,7 @@ html, body, {
 
     // remove the scrollbar styling from the page
     ::-webkit-scrollbar {
-        display: none;
+        width: 0px;
     }
 
     //remove scrollbars (IE)
@@ -284,6 +284,27 @@ html, body, {
         border: 0;
         height: 1px;
         background-color: $appNotificationDivderBackgroundColor;
+    }
+}
+
+/*
+ * Style scrollbars - add scrollbar class to get scrollbar
+ */
+.scrollbar {
+    ::-webkit-scrollbar {
+        width: 15px;
+    }
+
+    ::-webkit-scrollbar-track {
+        background-color: white;
+    }
+
+    ::-webkit-scrollbar-thumb {
+        background-color: lightgray;
+        border-radius: 10px;
+        border-color: white;
+        border-width: 4px;
+        border-style: solid;
     }
 }
 
